xfsprogs-2.6.34 (20 June 2005)
	- Switch to the fsxattr xfsctl for getting/setting project
	  identifiers on inodes, remove the short-lived specialised
	  ioctls for doing this.
	- Make the "blocktrash" xfs_db command available in expert-
	  mode only.

xfsprogs-2.6.33 (13 June 2005)
	- Another libhandle fix on 64bit, Big Endian systems.

xfsprogs-2.6.32 (08 June 2005)
	- Minor endian cleanups in some tools.
	- Fix a couple of xfs_quota double-reporting issues when
	  issuing commands via the -c (command line) 0option.

xfsprogs-2.6.31 (06 June 2005)
	- Fix previous MD driver-specific change to correctly handle
	  (i.e. not "stripe align") linear arrays.
	- Add MD RAID level 4, 6, and 10 support.
	- Make mkfs.xfs automatically adjiust the geometry to use
	  a sector size that matches the block size when MD RAID
	  level 4/5/6 are in use.
	- Couple of minor man page fixups, including patch botch on
	  initial revision of xfs_quota(8).

xfsprogs-2.6.30 (03 June 2005)
	- Add xfs_quota(8) command which knows how to do all things
	  quota related, and can also do the XFS specific extensions
	  like project quota, realtime device quota, etc.
	- Created a library of common code (libxcmd.a) shared by
	  xfs_growfs, xfs_io and xfs_quota.
	- Fix use of regular files for realtime subvolumes (debugging
	  only, really).
	- Fix bug in xfs_io command line option handling when commands
	  where specified for multiple files at once.
	- Allow xfs_io to specify O_NONBLOCK for regular file IO.
	- Fix MD driver-specific code to not attempt stripe alignment
	  for volumes that are not stripes (e.g. concat/mirror).

xfsprogs-2.6.29 (19 April 2005)
	- Fix mkfs.xfs -dfile.
	- Fix libhandle on 64bit, Big Endian systems.

xfsprogs-2.6.28 (30 March 2005)
	- Fix compiler warning in repair/dir.c size checks.
	- Fix more compilation problem with version 4 of gcc
	  (thanks to Andreas Jochens).
	- Make xfs_db and xfs_repair cope with filesystems that
	  have project quota enabled.
