@@ -1,3 +1,7 @@
+xfsprogs-2.6.35 (1 July 2005)
+	- Add back fd_to_handle() to libhandle.
+	- Add handle call mappings to xfsctl() for IRIX.
+
 xfsprogs-2.6.34 (20 June 2005)
 	- Switch to the fsxattr xfsctl for getting/setting project
 	  identifiers on inodes, remove the short-lived specialised
